# test-job-o-complex

./: .envtemplate  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/api/: urls.py  views.py
apps/main/: models.py  urls.py  views.py
apps/main/migrations/: 0001_initial.py
apps/main/templates/main/: base.html  index.html
apps/main/templates/main/includes/: suggestions.html
apps/main/utils/: __init__.py  format_response_weather.py
config/: settings.py  urls.py
